Close the Twitch bot when the client stops
Device authorization now runs on a named daemon thread and the cached activation URI
is volatile. Bot and InstalledChatbot expose close(), which the Fabric client
stopping event and the client GameTest call so the Twitch client, its executor
and the cached bot state are released. Chat feedback is marshalled onto the
client thread before touching the local player.